set(CMAKE_CXX_COMPILER ${RISCV_GNU_TOOLCHAIN}/bin/riscv64-unknown-linux-gnu-g++)

set(MODEL_DEEPSEEKR1_DIR ${MODEL_DIR}/DeepSeekR1)
set(LLVM_TOOLS_BINARY_DIR ${BUDDY_MLIR_DIR}/llvm/build/bin)
set(BUDDY_BINARY_DIR ${BUDDY_MLIR_DIR}/build/bin)
set(INTERFACE_DIR ${BUDDY_MLIR_DIR}/frontend/Interfaces)
set(INCLUDE_DIR ${BUCKYBALL_DEEPSEEKR1_DIR}/include)

add_custom_command(
  OUTPUT forward.o
  COMMAND ${BUDDY_BINARY_DIR}/buddy-opt ${MODEL_DEEPSEEKR1_DIR}/forward.mlir
            -pass-pipeline "builtin.module(func.func(tosa-to-linalg-named),func.func(tosa-to-linalg),func.func(tosa-to-tensor),func.func(tosa-to-arith))" |
          ${BUDDY_BINARY_DIR}/buddy-opt
            -arith-expand
            -eliminate-empty-tensors
            -empty-tensor-to-alloc-tensor
            -one-shot-bufferize
            -matmul-parallel-vectorization-optimize
            -batchmatmul-optimize
            -convert-linalg-to-affine-loops
            -affine-loop-fusion
            -lower-affine
            -ownership-based-buffer-deallocation
            -buffer-deallocation-simplification
            -bufferization-lower-deallocations
            -convert-vector-to-scf
            -expand-strided-metadata
            -convert-vector-to-llvm
            -memref-expand
            -arith-expand
            -convert-arith-to-llvm
            -finalize-memref-to-llvm
            -convert-scf-to-cf
            -llvm-request-c-wrappers
            -convert-arith-to-llvm
            -convert-math-to-llvm
            -convert-math-to-libm
            -convert-func-to-llvm
            -reconcile-unrealized-casts |
        ${BUDDY_BINARY_DIR}/buddy-translate --buddy-to-llvmir |
        ${BUDDY_BINARY_DIR}/buddy-llc -filetype=obj -mtriple=riscv64 -O0 -mattr=+buddyext,+D -float-abi=hard -o forward.o
  DEPENDS ${MODEL_DEEPSEEKR1_DIR}/forward.mlir
  COMMENT "Building forward.o "
  VERBATIM)

add_custom_command(
    OUTPUT subgraph0.o
    COMMAND ${LLVM_TOOLS_BINARY_DIR}/mlir-opt ${MODEL_DEEPSEEKR1_DIR}/subgraph0.mlir
              -pass-pipeline "builtin.module(func.func(tosa-to-linalg-named, tosa-to-linalg, tosa-to-tensor, tosa-to-arith))" |
            ${BUDDY_BINARY_DIR}/buddy-opt
              -convert-tensor-to-linalg
              > subgraph0_linalg.mlir
    COMMAND ${LLVM_TOOLS_BINARY_DIR}/mlir-opt ${MODEL_DEEPSEEKR1_DIR}/subgraph0.mlir
              -pass-pipeline "builtin.module(func.func(tosa-to-linalg-named, tosa-to-linalg, tosa-to-tensor, tosa-to-arith))" |
            ${BUDDY_BINARY_DIR}/buddy-opt
              -eliminate-empty-tensors
              -convert-elementwise-to-linalg
              -convert-tensor-to-linalg
              -one-shot-bufferize="bufferize-function-boundaries"
            -convert-linalg-to-tile
            -convert-tile-to-buckyball
            -lower-buckyball-to-bank-ssa
            -assign-physical-banks
            -lower-bank-ssa-to-intrinsics
            -lower-buckyball
              > subgraph0_buckyball.mlir
    COMMAND ${LLVM_TOOLS_BINARY_DIR}/mlir-opt ${MODEL_DEEPSEEKR1_DIR}/subgraph0.mlir
              -pass-pipeline "builtin.module(func.func(tosa-to-linalg-named, tosa-to-linalg, tosa-to-tensor, tosa-to-arith))" |
            ${BUDDY_BINARY_DIR}/buddy-opt
              -eliminate-empty-tensors
              -convert-elementwise-to-linalg
              -convert-tensor-to-linalg
              -one-shot-bufferize="bufferize-function-boundaries"
            -convert-linalg-to-tile
            -convert-tile-to-buckyball
            -lower-buckyball-to-bank-ssa
            -assign-physical-banks
            -lower-bank-ssa-to-intrinsics
            -lower-buckyball
              -ownership-based-buffer-deallocation
              -buffer-deallocation-simplification
              -bufferization-lower-deallocations
              -expand-strided-metadata
              -llvm-request-c-wrappers
              > subgraph0_test.mlir
    COMMAND ${BUDDY_BINARY_DIR}/buddy-opt ${MODEL_DEEPSEEKR1_DIR}/subgraph0.mlir
              -pass-pipeline "builtin.module(func.func(tosa-to-linalg-named, tosa-to-linalg, tosa-to-tensor, tosa-to-arith))" |
            ${BUDDY_BINARY_DIR}/buddy-opt
              -eliminate-empty-tensors
              -convert-elementwise-to-linalg
              -convert-tensor-to-linalg
              -one-shot-bufferize="bufferize-function-boundaries"
              -convert-linalg-to-tile
              -convert-tile-to-buckyball
              -lower-buckyball-to-bank-ssa
              -assign-physical-banks
              -llvm-request-c-wrappers
              -lower-bank-ssa-to-intrinsics
              -expand-strided-metadata
              -convert-linalg-to-loops
              -convert-scf-to-cf
              -lower-buckyball
              -ownership-based-buffer-deallocation
              -buffer-deallocation-simplification
              -bufferization-lower-deallocations
              -convert-cf-to-llvm
              -convert-arith-to-llvm
              -convert-math-to-llvm
              -convert-math-to-libm
              -convert-func-to-llvm
              -finalize-memref-to-llvm
              -reconcile-unrealized-casts |
            ${BUDDY_BINARY_DIR}/buddy-translate --buddy-to-llvmir
            > subgraph0.ll
    COMMAND ${BUDDY_BINARY_DIR}/buddy-opt ${MODEL_DEEPSEEKR1_DIR}/subgraph0.mlir
              -pass-pipeline "builtin.module(func.func(tosa-to-linalg-named, tosa-to-linalg, tosa-to-tensor, tosa-to-arith))" |
            ${BUDDY_BINARY_DIR}/buddy-opt
              -eliminate-empty-tensors
              -convert-elementwise-to-linalg
              -convert-tensor-to-linalg
              -one-shot-bufferize="bufferize-function-boundaries"
            -convert-linalg-to-tile
            -convert-tile-to-buckyball
            -lower-buckyball-to-bank-ssa
            -assign-physical-banks
            -llvm-request-c-wrappers
            -lower-bank-ssa-to-intrinsics
            -expand-strided-metadata
            -convert-linalg-to-loops
            -convert-scf-to-cf
            -lower-buckyball
              -ownership-based-buffer-deallocation
              -buffer-deallocation-simplification
              -bufferization-lower-deallocations
              -convert-cf-to-llvm
              -convert-arith-to-llvm
              -convert-math-to-llvm
              -convert-math-to-libm
              -convert-func-to-llvm
              -finalize-memref-to-llvm
              -reconcile-unrealized-casts |
            ${BUDDY_BINARY_DIR}/buddy-translate --buddy-to-llvmir |
            ${BUDDY_BINARY_DIR}/buddy-llc -filetype=obj -mtriple=riscv64 -O3 -mattr=+buddyext,+D -float-abi=hard
              -o subgraph0.o
            DEPENDS ${MODEL_DEEPSEEKR1_DIR}/subgraph0.mlir
    COMMENT "Building subgraph0.o"
    VERBATIM)

add_library(BuckyballDEEPSEEKR1 STATIC forward.o subgraph0.o)
set_target_properties(BuckyballDEEPSEEKR1 PROPERTIES LINKER_LANGUAGE CXX)
add_dependencies(BuckyballDEEPSEEKR1 deepseekr1-model-build)
add_executable(buddy-buckyball-deepseekr1-run ${MODEL_DEEPSEEKR1_DIR}/deepseek-r1-main.cpp)
add_dependencies(buddy-buckyball-deepseekr1-run BuckyballDEEPSEEKR1)

target_include_directories(buddy-buckyball-deepseekr1-run PRIVATE ${INTERFACE_DIR} ${INCLUDE_DIR})

if(BUDDY_MLIR_USE_MIMALLOC)
  list(APPEND BUCKYBALL_DEEPSEEKR1_LIBS mimalloc)
endif()

set(BUDDY_DEEPSEEKR1_LIBS BuckyballDEEPSEEKR1 ModelTestCRunnerUtils)
target_link_libraries(buddy-buckyball-deepseekr1-run -static ${BUDDY_DEEPSEEKR1_LIBS})

set(DEEPSEEKR1_OUTPUT_DIR ${OUTPUT_BIN_DIR}/src/ModelTest/e2e/models/archs/buckyball/DeepSeekR1)

add_custom_command(TARGET buddy-buckyball-deepseekr1-run POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E make_directory ${DEEPSEEKR1_OUTPUT_DIR}
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
          $<TARGET_FILE:buddy-buckyball-deepseekr1-run>
          ${DEEPSEEKR1_OUTPUT_DIR}/buddy-buckyball-deepseekr1-run
  COMMENT "Copying Buckyball DeepSeekR1 executable to output directory"
  VERBATIM
)

add_custom_target(sync-buckyball-deepseekr1-deps
  COMMAND ${CMAKE_COMMAND} -E make_directory ${DEEPSEEKR1_OUTPUT_DIR}
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
          ${MODEL_DEEPSEEKR1_DIR}/arg0.data
          ${DEEPSEEKR1_OUTPUT_DIR}/arg0.data
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
          ${MODEL_DEEPSEEKR1_DIR}/vocab.txt
          ${DEEPSEEKR1_OUTPUT_DIR}/vocab.txt
  DEPENDS
          ${MODEL_DEEPSEEKR1_DIR}/arg0.data
          ${MODEL_DEEPSEEKR1_DIR}/vocab.txt
  COMMENT "Syncing DeepSeekR1 runtime deps to output directory"
  VERBATIM
)

add_dependencies(buddy-buckyball-deepseekr1-run sync-buckyball-deepseekr1-deps)
